tests/errors/implicit_typing2.f90
module implicit_typing2_errors_module
implicit none

contains
subroutine sub1()
    x = 1
end subroutine sub1
end module implicit_typing2_errors_module

program main
end program main
